Closed Bug 1053603 Opened 11 years ago Closed 11 years ago

Fix some more bad implicit constructors in the IPC code

Categories

(Core :: IPC, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Attached patch Patch (v1)Splinter Review
No description provided.
Attachment #8472755 - Attachment description: x → Patch (v1)
Attachment #8472755 - Attachment is patch: true
Attachment #8472755 - Flags: review?(bent.mozilla)
Blocks: explicit
Attachment #8472755 - Flags: review?(bent.mozilla) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: