Bug 1053603 - Fix some more bad implicit constructors in the IPC code; r=bent